# st506

./: CMakeLists.txt  README.md
lib/fatfs/: CMakeLists.txt
lib/lt_logger/: CMakeLists.txt
lib/sdlib/: __CMakeLists.txt
src/: CMakeLists.txt  pico506.h
